--- a/src/Makefile
+++ b/src/Makefile
@@ -61,7 +61,7 @@ SRC += memory.c filetypes.c faulthandler.c sort.c crc32.c cic.c
 SRC += cli.c xmodem.c irq.c rle.c sdnative.c msu1.c crc16.c sysinfo.c
 SRC += cfg.c cheat.c yaml.c
 
-#SRC += usbdesc.c usbcore.c usbuser.c usbhw.c cdcuser.c
+SRC += usbdesc.c usbcore.c usbuser.c usbhw.c cdcuser.c usbupload.c
 
 # usbcontrol.c usb_hid.c usbhw_lpc.c usbinit.c usbstdreq.c
 
@@ -107,7 +107,7 @@ CDEFS = -DF_OSC=$(CONFIG_MCU_FOSC)UL
 
 
 # Place -I options here
-CINCS =
+CINCS = -Iinclude
 
 
 # CPU-specific flags
