Added workaround for missing lost interrupt after SRAM reads.

--- a/src/config
+++ b/src/config
@@ -1,4 +1,4 @@
-CONFIG_VERSION="0.1.7e-usb0a"
-#CONFIG_FWVER=0x010107a5
-CONFIG_FWVER=0x44534E53
+CONFIG_VERSION="0.1.7e-usb0b"
+CONFIG_FWVER=0x010107b5
+#CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
