--- a/src/config
+++ b/src/config
@@ -1,4 +1,4 @@
-CONFIG_VERSION="0.1.7e-usb0d"
-CONFIG_FWVER=0x010107d5
+CONFIG_VERSION="0.1.7e-usb0e"
+CONFIG_FWVER=0x010107e5
 #CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
