--- a/src/config
+++ b/src/config
@@ -1,4 +1,4 @@
-CONFIG_VERSION="0.1.7e-usb0f"
-CONFIG_FWVER=0x010107F5
+CONFIG_VERSION="0.1.7e-usb0j"
+CONFIG_FWVER=0x010147f5
 #CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
