Added interrupt framing to streams. Added timing flops everywhere. Fixed tracing bugs. Fixed several streaming bugs.

--- a/src/config
+++ b/src/config
@@ -1,6 +1,4 @@
 CONFIG_VERSION="0.1.7e-usb-v2"
-#CONFIG_FWVER=0x80000002
-CONFIG_FWVER=0x44534E53
+CONFIG_FWVER=0x80000002
+#CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
-
-#CONFIG_FWVER=0x01010705
