v6 Fixed hookless patch region so it doesn't crash SNES when hook is enabled. Added websocket connectivity information. Added Name command to identify websocket app. Added currentRom and currentFeature strings to Info command. Added slightly faster mirror for first $7800 of WRAM.

--- a/src/config
+++ b/src/config
@@ -1,4 +1,4 @@
-CONFIG_VERSION="0.1.7e-usb-v5"
-CONFIG_FWVER=0x80000005
-#CONFIG_FWVER=0x44534E53
+CONFIG_VERSION="0.1.7e-usb-v7"
+#CONFIG_FWVER=0x80000007
+CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
