--- a/src/config
+++ b/src/config
@@ -1,3 +1,4 @@
-CONFIG_VERSION="0.1.7e"
-CONFIG_FWVER=0x01010705
+CONFIG_VERSION="0.1.7e-addrmap-v1"
+#CONFIG_FWVER=0x01010705
+CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
