--- a/src/config
+++ b/src/config
@@ -1,5 +1,5 @@
 CONFIG_VERSION="0.1.7e-sa1-v00"
 #CONFIG_FWVER=0x01010705
-CONFIG_FWVER=0xFEFFFFFE
+CONFIG_FWVER=0xFEFFFFFD
 #CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
