--- a/src/config
+++ b/src/config
@@ -1,5 +1,4 @@
-CONFIG_VERSION="0.1.7e-sa1-v00"
-#CONFIG_FWVER=0x01010705
-CONFIG_FWVER=0xFEFFFFFD
-#CONFIG_FWVER=0x44534E53
+CONFIG_VERSION="1.8.0-sa1-v02"
+//CONFIG_FWVER=0x01080000
+CONFIG_FWVER=0xFEFFFFFA
 CONFIG_MCU_FOSC=12000000
