--- a/src/config
+++ b/src/config
@@ -1,4 +1,4 @@
-CONFIG_VERSION="1.8.0-sa1-v02"
+CONFIG_VERSION="1.8.0-sa1-v03"
 //CONFIG_FWVER=0x01080000
-CONFIG_FWVER=0xFEFFFFFA
+CONFIG_FWVER=0xFEFFFFF9
 CONFIG_MCU_FOSC=12000000
