--- a/src/config
+++ b/src/config
@@ -1,4 +1,5 @@
-CONFIG_VERSION="1.8.0-sa1-v04"
+CONFIG_VERSION="1.8.0-sa1-v05"
 //CONFIG_FWVER=0x01080000
-CONFIG_FWVER=0xFEFFFFF8
+CONFIG_FWVER=0xFEFFFFF6
+//CONFIG_FWVER=0x44534E53
 CONFIG_MCU_FOSC=12000000
