--- a/verilog/sd2snes_base/Makefile
+++ b/verilog/sd2snes_base/Makefile
@@ -1,6 +1,6 @@
 CORE = base
 
-VSRC = address.v cheat.v clk_test.v dac.v dcm.v bsx.v srtc.v upd77c25.v main.v mcu_cmd.v msu.v sd_dma.v spi.v
+VSRC = address.v cheat.v clk_test.v dac.v dcm.v bsx.v srtc.v upd77c25.v main.v mcu_cmd.v msu.v sd_dma.v spi.v chrono_figure_sys.v
 VHSRC =
 
 XIL_IP = dac_buf msu_databuf snescmd_buf upd77c25_datram upd77c25_datrom upd77c25_pgmrom
